{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 55,
  "lineage": "a831a8f6-b983-a153-4048-5045d961902d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bf96686c74406b3",
            "arn": "arn:aws:ec2:us-east-2:693014165328:elastic-ip/eipalloc-04bf96686c74406b3",
            "association_id": "eipassoc-004e84ceb6cc54c69",
            "domain": "vpc",
            "id": "eipalloc-04bf96686c74406b3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b998f0f4214b816a",
            "private_dns": "ip-10-0-1-186.us-east-2.compute.internal",
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-3-140-114-222.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.114.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:internet-gateway/igw-0b09e2d724be355cf",
            "id": "igw-0b09e2d724be355cf",
            "owner_id": "693014165328",
            "tags": {
              "Name": "teste-api-igw"
            },
            "tags_all": {
              "Name": "teste-api-igw"
            },
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:693014165328:loadbalancer/net/teste-api-nlb/d8cc496564454ef5",
            "arn_suffix": "net/teste-api-nlb/d8cc496564454ef5",
            "dns_name": "teste-api-nlb-d8cc496564454ef5.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:693014165328:loadbalancer/net/teste-api-nlb/d8cc496564454ef5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "teste-api-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017b5bbd387549cc3"
              },
              {
                "subnet_id": "subnet-0aa9f8a44c8c00cda"
              }
            ],
            "subnets": [
              "subnet-017b5bbd387549cc3",
              "subnet-0aa9f8a44c8c00cda"
            ],
            "tags": {
              "Name": "teste-api-nlb"
            },
            "tags_all": {
              "Name": "teste-api-nlb"
            },
            "vpc_id": "vpc-0ca259d7e744c179a",
            "zone_id": "ZLMOA37VPKANP"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bf96686c74406b3",
            "association_id": "eipassoc-004e84ceb6cc54c69",
            "connectivity_type": "public",
            "id": "nat-0c88ad64926b25e28",
            "network_interface_id": "eni-0b998f0f4214b816a",
            "private_ip": "10.0.1.186",
            "public_ip": "3.140.114.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aa9f8a44c8c00cda",
            "tags": {
              "Name": "teste-api-nat-gateway"
            },
            "tags_all": {
              "Name": "teste-api-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:route-table/rtb-0a0f0d8d9a5c919f2",
            "id": "rtb-0a0f0d8d9a5c919f2",
            "owner_id": "693014165328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c88ad64926b25e28",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teste-api-private-rt"
            },
            "tags_all": {
              "Name": "teste-api-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:route-table/rtb-0af31e5e8b8620a73",
            "id": "rtb-0af31e5e8b8620a73",
            "owner_id": "693014165328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b09e2d724be355cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teste-api-public-rt"
            },
            "tags_all": {
              "Name": "teste-api-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b4975338bd7b5e6",
            "route_table_id": "rtb-0a0f0d8d9a5c919f2",
            "subnet_id": "subnet-01a586df660cfd3cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d23aab675f00cb",
            "route_table_id": "rtb-0a0f0d8d9a5c919f2",
            "subnet_id": "subnet-071dd42aedd8e7de8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09502767a15aebb65",
            "route_table_id": "rtb-0af31e5e8b8620a73",
            "subnet_id": "subnet-0aa9f8a44c8c00cda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1e89fbfd3bd646f",
            "route_table_id": "rtb-0af31e5e8b8620a73",
            "subnet_id": "subnet-017b5bbd387549cc3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:security-group/sg-0b43239b2203315f8",
            "description": "Security group para o Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b43239b2203315f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "teste-api-alb-sg",
            "name_prefix": "",
            "owner_id": "693014165328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teste-api-alb-sg"
            },
            "tags_all": {
              "Name": "teste-api-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:security-group/sg-0bcb8c2696c9754e4",
            "description": "Security group para o servico da API Python",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcb8c2696c9754e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0550013dede5f031c"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "teste-api-api-sg",
            "name_prefix": "",
            "owner_id": "693014165328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teste-api-api-sg"
            },
            "tags_all": {
              "Name": "teste-api-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nginx",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:security-group/sg-0550013dede5f031c",
            "description": "Security group para o servico Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0550013dede5f031c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "teste-api-nginx-sg",
            "name_prefix": "",
            "owner_id": "693014165328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teste-api-nginx-sg"
            },
            "tags_all": {
              "Name": "teste-api-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:subnet/subnet-01a586df660cfd3cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a586df660cfd3cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693014165328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-api-private-subnet-1"
            },
            "tags_all": {
              "Name": "teste-api-private-subnet-1"
            },
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:subnet/subnet-071dd42aedd8e7de8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071dd42aedd8e7de8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693014165328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-api-private-subnet-2"
            },
            "tags_all": {
              "Name": "teste-api-private-subnet-2"
            },
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:subnet/subnet-0aa9f8a44c8c00cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa9f8a44c8c00cda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "693014165328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-api-public-subnet-1"
            },
            "tags_all": {
              "Name": "teste-api-public-subnet-1"
            },
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:subnet/subnet-017b5bbd387549cc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017b5bbd387549cc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "693014165328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-api-public-subnet-2"
            },
            "tags_all": {
              "Name": "teste-api-public-subnet-2"
            },
            "vpc_id": "vpc-0ca259d7e744c179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:693014165328:vpc/vpc-0ca259d7e744c179a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058834aa10212e875",
            "default_route_table_id": "rtb-0d61aba8c7679de0c",
            "default_security_group_id": "sg-05228370d83e62dab",
            "dhcp_options_id": "dopt-05b4b27b1fe12f3ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca259d7e744c179a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d61aba8c7679de0c",
            "owner_id": "693014165328",
            "tags": {
              "Name": "teste-api-vpc"
            },
            "tags_all": {
              "Name": "teste-api-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}